# rad

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
rust/: Cargo.toml
rust/cli/: Cargo.toml
rust/cli/src/: main.rs  remote.rs
rust/cli/src/cmd/: clone.rs  diff.rs  mod.rs  pull.rs  status.rs
rust/core/: Cargo.toml
rust/core/src/: accept.rs  crypto.rs  delete.rs  founder.rs  lib.rs  region.rs  reject.rs  sign.rs  store.rs  tests.rs  types.rs
rust/core/src/git/: import.rs
rust/core/src/storage/: fs_backend.rs  mod.rs  s3_backend.rs  s3_store.rs
rust/src/: accept.rs  crypto.rs  founder.rs  init.rs  main.rs  oplog.rs  pipeline.rs  region.rs  reject.rs  remote.rs  sign.rs  store.rs  types.rs  verify.rs
rust/src/cmd/: log.rs  mod.rs  push.rs
rust/src/git/: export.rs
rust/src/relay/: accept.rs  mod.rs  operations.rs  participants.rs  read.rs  state.rs
rust/src/storage/: backend.rs  mod.rs  s3_backend.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: host.rs  lib.rs  wasm_backend.rs
spec/: PHILOSOPHY.md
spec/relay/: openapi.yaml
tests/: runner-debug.sh  runner-noexit.sh  runner.sh  t001_version.sh  t002_help.sh  t003_keygen.sh  t004_init.sh  t005_sign.sh  t006_verify.sh  t007_region.sh  t008_write.sh  t009_chain.sh  t010_accept.sh  t011_reject.sh  t012_founder.sh  t013_store.sh  t014_persist.sh  t015_relay.sh  t016_relay_rust.sh  t017_relay_parity.sh  t018_git_import.sh  t019_git_export.sh  t020_git_roundtrip.sh  t021_status.sh  t022_log.sh  t023_diff.sh  t024_clone.sh  t025_push.sh  t026_pull.sh  t027_s3store.sh  t028_s3persist.sh  t029_relay_s3.sh  t030_file_founder.sh  t031_delete.sh  t032_wasm_build.sh  t033_wasm_host.sh
tests/helpers/: create_git_repo.sh
ts/: build.sh  check-wasm.ts  package.json  tsconfig.json
ts/src/: accept.ts  crypto.ts  delete.ts  founder.ts  init.ts  main.ts  oplog.ts  pipeline.ts  region.ts  reject.ts  remote.ts  sign.ts  store.ts  types.ts  verify.ts
ts/src/cmd/: clone.ts  diff.ts  log.ts  pull.ts  push.ts  status.ts
ts/src/git/: export.ts  import.ts
ts/src/relay/: app.ts  idgen.ts  server.ts  transform.ts
ts/src/relay/routes/: accept.ts  read.ts  (+2 more)
ts/src/storage/: backend.ts  fs-backend.ts  s3-backend.ts  s3-store.ts
ts/src/wasm/: debug-test.ts  loader.ts  test.ts
