[package]
name = "rad"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "rad"
path = "src/main.rs"

[dependencies]
rad-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
