[package]
name = "rad-core"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
async-trait = "0.1"
