[package]
name = "rad-core"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"], optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = ["storage-backends"]
storage-backends = ["rust-s3", "async-trait"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
